# fastapi-mirrord

./: Dockerfile  README.md  main.py  mirrord-fastapi.yaml  pyproject.toml
