[tool.poetry]
name = "mirrord-testing"
version = "0.1.0"
description = ""
authors = ["Dmitry Kuleshov <d.kuleshov@playson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
